# Imperium-New-Reality

./: .gitignore  AGENTS.md  ANCIENT_EMPIRE_REFERENCE.md  EPOCH_MANIFEST.json  NEW_GENERATION_MANIFEST.json  NEW_REALITY_REMOTE_HEAD_CONTRACT.md  NEW_REALITY_SCOPE_LOCK.md  README.md  ROOT_RESOLUTION_CONTRACT.md  SALVAGE_REQUEST_TEMPLATE.json
ADMINISTRATUM/: README.md
AGENT_DIRECTIVES/: IMPERIUM_NEW_GENERATION_CORE_STRATEGIC_DIRECTION_V0_1.md
AGENT_IDE/: README.md
ARCHITECTURE/: ASTRONOMICON_TASK_FORMATION_V0_1.md  CURRENT_TO_TARGET_MAPPING_V0_1.md  CURRENT_TREE_INVENTORY_V0_1.json  EIGHT_ORGAN_SCOPING_CORRIDOR_V0_1.md  FRONTEND_BACKEND_FULLSTACK_BASELINE_NOTES_V0_1.md  MECHANICUS_TOOL_ADMISSION_V0_1.md  NEWGEN_ARCHITECTURE_MAP_V0_1.md  SERVITOR_RUN_RERUN_LOOP_V0_1.md  SKILL_GROWTH_SYSTEM_V0_1.md  TASK_KERNEL_REGISTRY_V0_1.md  TASK_STATE_EVIDENCE_BINDER_V0_1.md  VISUAL_BRAIN_TASK_CORRIDOR_V0_1.md
ASTRONOMICON/: README.md
AUTHORITY_DRAFTS/: OFFICIO_LIVE_COMMUNICATION_ENFORCEMENT_V0_1.md
COMMON_AGENT_CLI/: README.md  anti_crutch_check.py  base_half_cli.py  cli_contract.md  color_theme_imperium.json  command_palette_policy.json  diagnostics_contract.json  mode_switching_policy.json  operator_shell_widgets.py  renderer_contract.json  run_eight_organ_operator_shell_sweep.py  run_eight_organ_sweep.py  shell_behavior_policy.json  stage_checkpoint_builder.py  task_volume_check.py  textual_operator_shell.py  tool_availability_probe.py  (+2 more)
ORGANS/IMPERIAL_IDE/COCKPIT/shell-rs/: Cargo.toml  tauri.conf.json
ORGANS/IMPERIAL_IDE/COCKPIT/shell-rs/src/: lib.rs
(+7805 files in other folders)
