[package]
name = "imperial-ide-cockpit"
version = "0.1.0"
edition = "2021"

[lib]
name = "cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false }

[dependencies]
# default-features=false drops 'compression' which pulls reqwest -> version conflict
tauri = { version = "2", default-features = false, features = ["wry"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
